// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClickableHorizontalStepper component test should render correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="chakra-ui-light"
  >
    <div
      id="chakra-toast-portal"
    >
      <ul
        id="chakra-toast-manager-top"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
      />
      <ul
        id="chakra-toast-manager-top-left"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
      <ul
        id="chakra-toast-manager-top-right"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
      <ul
        id="chakra-toast-manager-bottom-left"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
      <ul
        id="chakra-toast-manager-bottom"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
      />
      <ul
        id="chakra-toast-manager-bottom-right"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
    </div>
    <div>
      <div
        class="css-1ofqig9"
      >
        <ol
          class="chakra-steps css-1b8x7s7"
        >
          <li
            aria-disabled="false"
            class="css-1az4mg4"
          >
            <div
              class="css-kcf2wt"
            >
              <div
                aria-current="step"
                class="css-s2gv3l"
              >
                <div
                  class="css-k008qs"
                  style="opacity: 0; transform: scale(0.5) translateZ(0);"
                >
                  <svg
                    class="css-iw1flb"
                    role="img"
                    viewBox="0 0 44 44"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.06 6L12 6.94L2.92 16H2V15.08L11.06 6ZM14.66 0C14.41 0 14.15 0.1 13.96 0.29L12.13 2.12L15.88 5.87L17.71 4.04C18.1 3.65 18.1 3 17.71 2.63L15.37 0.29C15.17 0.09 14.92 0 14.66 0ZM11.06 3.19L0 14.25V18H3.75L14.81 6.94L11.06 3.19Z"
                      fill="white"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-current="step"
                class="css-17ug9r4"
              >
                <span
                  class="css-v0f33p"
                >
                  first step
                </span>
              </div>
            </div>
            <div
              class="css-9m9spt"
            />
          </li>
          <li
            aria-disabled="true"
            class="css-n330yj"
          >
            <div
              class="css-kcf2wt"
            >
              <div
                class="css-s2gv3l"
              >
                <span
                  class="css-eb100c"
                  style="font-weight: medium; text-align: center; opacity: 0; transform: scale(0.5) translateZ(0);"
                >
                  2
                </span>
              </div>
              <div
                class="css-17ug9r4"
              >
                <span
                  class="css-62u96g"
                >
                  second step
                </span>
              </div>
            </div>
            <div
              class="css-9m9spt"
            />
          </li>
          <li
            aria-disabled="true"
            class="css-c6o9co"
          >
            <div
              class="css-kcf2wt"
            >
              <div
                class="css-s2gv3l"
              >
                <span
                  class="css-eb100c"
                  style="font-weight: medium; text-align: center; opacity: 0; transform: scale(0.5) translateZ(0);"
                >
                  3
                </span>
              </div>
              <div
                class="css-17ug9r4"
              >
                <span
                  class="css-62u96g"
                >
                  third step
                </span>
              </div>
            </div>
            <div
              class="css-1i0pmdv"
            />
          </li>
        </ol>
        text of first step
        <div
          class="css-6czo3j"
        >
          <div
            class="css-j7qwjs"
          >
            <button
              class="chakra-button css-1febxxj"
              type="button"
            >
              next
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1ofqig9"
    >
      <ol
        class="chakra-steps css-1b8x7s7"
      >
        <li
          aria-disabled="false"
          class="css-1az4mg4"
        >
          <div
            class="css-kcf2wt"
          >
            <div
              aria-current="step"
              class="css-s2gv3l"
            >
              <div
                class="css-k008qs"
                style="opacity: 0; transform: scale(0.5) translateZ(0);"
              >
                <svg
                  class="css-iw1flb"
                  role="img"
                  viewBox="0 0 44 44"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.06 6L12 6.94L2.92 16H2V15.08L11.06 6ZM14.66 0C14.41 0 14.15 0.1 13.96 0.29L12.13 2.12L15.88 5.87L17.71 4.04C18.1 3.65 18.1 3 17.71 2.63L15.37 0.29C15.17 0.09 14.92 0 14.66 0ZM11.06 3.19L0 14.25V18H3.75L14.81 6.94L11.06 3.19Z"
                    fill="white"
                  />
                </svg>
              </div>
            </div>
            <div
              aria-current="step"
              class="css-17ug9r4"
            >
              <span
                class="css-v0f33p"
              >
                first step
              </span>
            </div>
          </div>
          <div
            class="css-9m9spt"
          />
        </li>
        <li
          aria-disabled="true"
          class="css-n330yj"
        >
          <div
            class="css-kcf2wt"
          >
            <div
              class="css-s2gv3l"
            >
              <span
                class="css-eb100c"
                style="font-weight: medium; text-align: center; opacity: 0; transform: scale(0.5) translateZ(0);"
              >
                2
              </span>
            </div>
            <div
              class="css-17ug9r4"
            >
              <span
                class="css-62u96g"
              >
                second step
              </span>
            </div>
          </div>
          <div
            class="css-9m9spt"
          />
        </li>
        <li
          aria-disabled="true"
          class="css-c6o9co"
        >
          <div
            class="css-kcf2wt"
          >
            <div
              class="css-s2gv3l"
            >
              <span
                class="css-eb100c"
                style="font-weight: medium; text-align: center; opacity: 0; transform: scale(0.5) translateZ(0);"
              >
                3
              </span>
            </div>
            <div
              class="css-17ug9r4"
            >
              <span
                class="css-62u96g"
              >
                third step
              </span>
            </div>
          </div>
          <div
            class="css-1i0pmdv"
          />
        </li>
      </ol>
      text of first step
      <div
        class="css-6czo3j"
      >
        <div
          class="css-j7qwjs"
        >
          <button
            class="chakra-button css-1febxxj"
            type="button"
          >
            next
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UnclickableHorizontalStepper component test should render correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="chakra-ui-light"
  >
    <div
      id="chakra-toast-portal"
    >
      <ul
        id="chakra-toast-manager-top"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
      />
      <ul
        id="chakra-toast-manager-top-left"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
      <ul
        id="chakra-toast-manager-top-right"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
      <ul
        id="chakra-toast-manager-bottom-left"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
      <ul
        id="chakra-toast-manager-bottom"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
      />
      <ul
        id="chakra-toast-manager-bottom-right"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
    </div>
    <div>
      <div
        class="css-1ofqig9"
      >
        <ol
          class="chakra-steps css-1b8x7s7"
        >
          <li
            aria-disabled="false"
            class="css-1k3dlok"
          >
            <div
              class="css-kcf2wt"
            >
              <div
                aria-current="step"
                class="css-s2gv3l"
              >
                <div
                  class="css-k008qs"
                  style="opacity: 0; transform: scale(0.5) translateZ(0);"
                >
                  <svg
                    class="css-iw1flb"
                    role="img"
                    viewBox="0 0 44 44"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.06 6L12 6.94L2.92 16H2V15.08L11.06 6ZM14.66 0C14.41 0 14.15 0.1 13.96 0.29L12.13 2.12L15.88 5.87L17.71 4.04C18.1 3.65 18.1 3 17.71 2.63L15.37 0.29C15.17 0.09 14.92 0 14.66 0ZM11.06 3.19L0 14.25V18H3.75L14.81 6.94L11.06 3.19Z"
                      fill="white"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-current="step"
                class="css-17ug9r4"
              >
                <span
                  class="css-v0f33p"
                >
                  first step
                </span>
              </div>
            </div>
            <div
              class="css-9m9spt"
            />
          </li>
          <li
            aria-disabled="true"
            class="css-69b456"
          >
            <div
              class="css-kcf2wt"
            >
              <div
                class="css-s2gv3l"
              >
                <span
                  class="css-eb100c"
                  style="font-weight: medium; text-align: center; opacity: 0; transform: scale(0.5) translateZ(0);"
                >
                  2
                </span>
              </div>
              <div
                class="css-17ug9r4"
              >
                <span
                  class="css-62u96g"
                >
                  second step
                </span>
              </div>
            </div>
            <div
              class="css-9m9spt"
            />
          </li>
          <li
            aria-disabled="true"
            class="css-10a7ufa"
          >
            <div
              class="css-kcf2wt"
            >
              <div
                class="css-s2gv3l"
              >
                <span
                  class="css-eb100c"
                  style="font-weight: medium; text-align: center; opacity: 0; transform: scale(0.5) translateZ(0);"
                >
                  3
                </span>
              </div>
              <div
                class="css-17ug9r4"
              >
                <span
                  class="css-62u96g"
                >
                  third step
                </span>
              </div>
            </div>
            <div
              class="css-1i0pmdv"
            />
          </li>
        </ol>
        text of first step
        <div
          class="css-6czo3j"
        >
          <div
            class="css-j7qwjs"
          >
            <button
              class="chakra-button css-1febxxj"
              type="button"
            >
              next
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1ofqig9"
    >
      <ol
        class="chakra-steps css-1b8x7s7"
      >
        <li
          aria-disabled="false"
          class="css-1k3dlok"
        >
          <div
            class="css-kcf2wt"
          >
            <div
              aria-current="step"
              class="css-s2gv3l"
            >
              <div
                class="css-k008qs"
                style="opacity: 0; transform: scale(0.5) translateZ(0);"
              >
                <svg
                  class="css-iw1flb"
                  role="img"
                  viewBox="0 0 44 44"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.06 6L12 6.94L2.92 16H2V15.08L11.06 6ZM14.66 0C14.41 0 14.15 0.1 13.96 0.29L12.13 2.12L15.88 5.87L17.71 4.04C18.1 3.65 18.1 3 17.71 2.63L15.37 0.29C15.17 0.09 14.92 0 14.66 0ZM11.06 3.19L0 14.25V18H3.75L14.81 6.94L11.06 3.19Z"
                    fill="white"
                  />
                </svg>
              </div>
            </div>
            <div
              aria-current="step"
              class="css-17ug9r4"
            >
              <span
                class="css-v0f33p"
              >
                first step
              </span>
            </div>
          </div>
          <div
            class="css-9m9spt"
          />
        </li>
        <li
          aria-disabled="true"
          class="css-69b456"
        >
          <div
            class="css-kcf2wt"
          >
            <div
              class="css-s2gv3l"
            >
              <span
                class="css-eb100c"
                style="font-weight: medium; text-align: center; opacity: 0; transform: scale(0.5) translateZ(0);"
              >
                2
              </span>
            </div>
            <div
              class="css-17ug9r4"
            >
              <span
                class="css-62u96g"
              >
                second step
              </span>
            </div>
          </div>
          <div
            class="css-9m9spt"
          />
        </li>
        <li
          aria-disabled="true"
          class="css-10a7ufa"
        >
          <div
            class="css-kcf2wt"
          >
            <div
              class="css-s2gv3l"
            >
              <span
                class="css-eb100c"
                style="font-weight: medium; text-align: center; opacity: 0; transform: scale(0.5) translateZ(0);"
              >
                3
              </span>
            </div>
            <div
              class="css-17ug9r4"
            >
              <span
                class="css-62u96g"
              >
                third step
              </span>
            </div>
          </div>
          <div
            class="css-1i0pmdv"
          />
        </li>
      </ol>
      text of first step
      <div
        class="css-6czo3j"
      >
        <div
          class="css-j7qwjs"
        >
          <button
            class="chakra-button css-1febxxj"
            type="button"
          >
            next
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
